# model-compare

./: README.md  pyproject.toml
model_compare/: __init__.py  cli.py  diff.py  display.py  metrics.py  runner.py
model_compare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
